hphp/hack/test/typecheck/pending_switch1.php.exp
File "pending_switch1.php", line 15, characters 10-11:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
